# swdiag

./: COPYING  GNUmakefile.am  Makefile.am  configure.ac
include/: swdiag_client.h
server/: swdiag.cfg  swdiag.conf
server/modules/: diag_diskspace.sh  diag_memory.py  diag_postgres_conf.py
server/src/: swdiag_json_parser.c  swdiag_server.c  swdiag_server_config.c  swdiag_server_config.h  swdiag_server_module.c  swdiag_server_module.h  swdiag_webserver.c  swdiag_webserver.h
src/: swdiag_api.c  swdiag_api.h  swdiag_cli.h  swdiag_cli_local.c  swdiag_cli_local.h  swdiag_linux.c  swdiag_linux.h  swdiag_obj.c  swdiag_obj.h  swdiag_posix.c  swdiag_rci.c  swdiag_sched.c  swdiag_sequence.c  swdiag_syslog.c  swdiag_thread.c  swdiag_thread.h  swdiag_trace.c  swdiag_unix_clients.h  swdiag_unix_rpc_master.c  swdiag_unix_rpc_slave.c  swdiag_util.c  swdiag_xos.h
tests/: Makefile.am  check_obj.c  check_sched.c  check_thread.c  check_util.c
trunk/: GNUmakefile.am  Makefile.am  configure.ac
trunk/docs/: quickguide.dox
trunk/include/: swdiag_client.h
trunk/server/: swdiag.conf
trunk/server/http/: index.html
trunk/server/modules/: diag_diskspace.sh  (+1 more)
trunk/src/: swdiag_api.c  swdiag_cli.h  swdiag_cli_local.c  swdiag_cli_local.h  swdiag_linux.c  swdiag_linux.h  swdiag_obj.c  swdiag_posix.c  swdiag_rci.c  swdiag_sched.c  swdiag_sequence.c  swdiag_syslog.c  swdiag_thread.c  swdiag_util.c  swdiag_xos.c  swdiag_xos.h
trunk/tests/: Makefile.am  check_xos.c
trunk/util/: swdiag.c  swdiag_unix_cli.c  swdiag_unix_main.c
util/: swdiag_test_proc.c  swdiag_unix_main.c
(+9 files in other folders)
